--- a/src/OrderService.API/appsettings.Development.json
+++ b/src/OrderService.API/appsettings.Development.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "OrderDb": "Server=host.docker.internal,1433;Database=OrderService;User Id=sa;Password=123456;TrustServerCertificate=True;"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092",
+    "Acks": "All",
+    "EnableIdempotence": true,
+    "MessageSendMaxRetries": 3,
+    "RetryBackoffMs": 100,
+    "LingerMs": 5
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
