--- a/src/OrderService.API/appsettings.json
+++ b/src/OrderService.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "OrderDb": "Server=host.docker.internal,1433;Database=OrderService;User Id=sa;Password=123456;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
