--- a/src/OrderService.Application/OrderService.Application.csproj
+++ b/src/OrderService.Application/OrderService.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OrderService.Domain\OrderService.Domain.csproj" />
+    <ProjectReference Include="..\OrderService.Infrastructure\OrderService.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
