order serviced kafka implementation

--- a/src/OrderService.API/appsettings.Development.json
+++ b/src/OrderService.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderDb": "Server=host.docker.internal,1433;Database=OrderService;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    "OrderDb": "Server=.\\MSSQLSERVER2;Database=OrderService;User Id=sa;Password=123456;TrustServerCertificate=True;"
   },
   "Kafka": {
     "BootstrapServers": "localhost:9092",
